# robothor

./: .gitignore  .gitleaks.toml  .mcp.json  .plan  .pre-commit-config.yaml  .sops.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INFRASTRUCTURE.md  LICENSE  README-public.md  README.md  ROADMAP.md  SECURITY.md  SERVICES.md  brain  comms  conftest.py  health  mypy.ini  pyproject.toml  pytest.ini  robothor-services.json  run_tests.sh  runtime  templates  tunnel
.claude/: AGENT_BUILDER.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
agents/: jobs.example.json  openclaw.example.json
app/: README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
brain/: .aider.chat.history.md  .aider.input.history  .gitignore  AGENTS.md  ARCHITECTURE.md  CALENDAR_MONITOR.md  CLAUDE.md  CONVERSATION_INBOX.md  CONVERSATION_RESOLVER.md  CRM_STEWARD.md  CRON_DESIGN.md  EMAIL_ANALYST.md  EMAIL_CLASSIFIER.md  ENGINE_REPORT.md  HEARTBEAT.md  IDENTITY.md  INFRASTRUCTURE.md  MEMORY.md  README.md  RESPONDER.md  SECURITY.md  SERVICES.md  SOUL.md  TOOLS.md  USER.md  VISION.md  VISION_MONITOR.md  agent_capabilities.json  create_email_tasks.sh  draft_craig_reply.md  draft_daniel_ceo_transition.md  draft_leadership_transition.md  email-analyst-status.md  list_crm_tasks.py  mutation.graphql  nightwatch-backlog.md  philosophizing.  response-status.md  website_review_2026-02-16.md
crm/: .env.example  .gitignore  CLAUDE.md  backfill_chatwoot.py  cleanup_backup.json  cleanup_crm.py  docker-compose.yml  migrate_contacts.py
docs/: AGENT_BUILDER.md  CRON_MAP.md  DATA_FLOW.md  DEPLOYMENT.md  DOC_MAINTENANCE.md  FEDERATION.md  ONBOARDING.md  PLATFORM_INSTANCE.md  READING_GUIDE.md  SYSTEM_ARCHITECTURE.md  TESTING.md  architecture.md  configuration.md  deployment.md  event-bus.md  memory-system.md  quickstart.md  webhooks.yaml
infra/: docker-compose.yml  robothor.env.example  setup.sh
local/: owner.env.example
memory/: conversation-resolver-status.md  crm-steward-status.md
robothor/: __init__.py  cli.py  config.py  constants.py  health_contract.py  setup.py  tunnel.py
runtime/: openclaw.json
scripts/: backup-ssd.sh  boot-orchestrator.py  bridge-watchdog.service  bridge-watchdog.timer  check_claude_md_size.sh  check_deleted_refs.sh  check_instance_leak.py  cron-wrapper.sh  decrypt-secrets.sh  devops_collect_github.py  devops_collect_jira.py  instance_leak_allowlist.yaml  nightwatch_pr_sweep.py  sag-local  seed-impetus-scenarios.py  seed_dev_team_identities.py  smoke_test_glm5.py  sync_runtime.py  task_coordination_monitor.py  verify-deps.py  (+4 more)
(+973 files in other folders)
